fix(integration_page): Fixed integration items alignment issue

--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -133,3 +133,8 @@ body.smartpay_page_smartpay-form.swal2-toast-shown {
     justify-content: space-between;
     width: 100%;
 }
+
+p.excerpt {
+    overflow: hidden;
+    height: 60px;
+}
